--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/dancing-script": "^5.1.1",
     "@lordicon/react": "^1.10.1",
+    "@vercel/analytics": "^1.4.1",
     "groq-sdk": "^0.12.0",
     "next": "15.1.4",
     "react": "^19.0.0",
